--- a/presskit.html
+++ b/presskit.html
@@ -46,7 +46,7 @@
             <h2 class="font-bodega-black">Press Kit</h2>
             <img class="press-header-photo" src="img/hero-photo.webp" alt="Photo of Red Weather band members on a couch">
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/M7ID9kfWZuY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/8n1cVK4IyxY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="press-header-quotes">
                 <li class="quote">
@@ -99,7 +99,7 @@
             </div>
             <li class="press-photo-list">
                 <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/hero-photo.webp" alt="Red Weather band members on a couch"></a>
-                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/about-photo.webp" alt="Red Weather band members against a purple wall"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/wall-purple-bg.webp" alt="Red Weather band members against a purple wall"></a>
                 <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/warehouseA.jpg" alt="Red Weather band closeup in a warehouse"></a>
                 <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/warehouseB.jpg" alt="Red Weather band wide shot in a warehouse"></a>
             </li>
@@ -112,6 +112,8 @@
                 <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png" alt="Red Weather on Apple Music"></a>
             </div>
             <div id="press-music-player" class="music-player-wrapper">
+                <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2516812749/size=large/bgcol=333333/linkcol=e99708/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/track/take-it-back">Take it Back by Red Weather</a></iframe>
+                <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2575108123/size=large/bgcol=333333/linkcol=9a64ff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/track/start-again">Start Again by Red Weather</a></iframe>
                 <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=9a64ff/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
             </div>
         </div>
@@ -123,7 +125,7 @@
                     <iframe src="https://www.youtube.com/embed/A1a1gFn1Kw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/q0pIQcSqGx4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/NpWAQGoYp8E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
