--- a/shows.html
+++ b/shows.html
@@ -43,12 +43,12 @@
     </div>
     
     <div id="mobile-banner" class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=M7ID9kfWZuY" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "TAKE IT BACK" STREAMING NOW!</p></a>
+        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=8n1cVK4IyxY" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "FAKE FRIENDS" STREAMING NOW!</p></a>
     </div>
 
     <div class="shows-banner">
         <div class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-            <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=M7ID9kfWZuY" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "TAKE IT BACK" STREAMING NOW!</p></a>
+            <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=8n1cVK4IyxY" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "FAKE FRIENDS" STREAMING NOW!</p></a>
         </div>
     </div>
 
@@ -66,49 +66,30 @@
 
         <!-- TEMPLATE -->
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-11-03.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Red Weather & Emensia @ Mona Lisa NYC</h3>
+            <img class="show-flyer press-header-photo" src="img/shows/23-11-17.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Local Pop-Punk Show @ Taphouse</h3>
             <p class="show-desc">
-                <b>Date:&emsp;</b> Nov. 3, 2023<br>
-                <b>Venue:&emsp;</b> Mona Lisa<br>
-                <b>City:&emsp;</b> New York, NY<br>
-                <b>Tickets:&emsp;</b> $15 Adv. / $20 Drs.<br>
-                <b>Buy Tickets:</b> <a id="ticket-link" target="_blank" href="https://link.dice.fm/e6xKDDD9BDb">CLICK HERE</a><br>
-                <b>Doors:&emsp;</b> 6:00pm<br>
+                <b>Date:&emsp;</b> Nov. 17, 2023<br>
+                <b>Venue:&emsp;</b> Norfolk Taphouse<br>
+                <b>City:&emsp;</b> Norfolk, VA<br>
+                <b>Tickets:&emsp;</b> $10<br>
+                <b>Doors:&emsp;</b> 7:00pm<br>
             </p>
-        </div>
-
-        <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-11-04.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Red Weather & Emensia @ Nostalgia</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> Nov. 4, 2023<br>
-                <b>Venue:&emsp;</b> Nostalgia<br>
-                <b>City:&emsp;</b> Bethpage, NY<br>
-                <b>Tickets:&emsp;</b> $10 Adv. / $12 Drs.<br>
-                <b>Buy Tickets:</b> <a id="ticket-link" target="_blank" href="https://nostalgiali.com/event/to-each-its-own-red-weather-gaslite-emensia/">CLICK HERE</a><br>
-                <b>Doors:&emsp;</b> 3:30pm<br>
-            </p>
-        </div>
-
-        <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-11-05try2.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Angel Envy, Red Weather, Emensia, & Mirror Club</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> Nov. 5, 2023<br>
-                <b>Venue:&emsp;</b> Maxwell's on Main<br>
-                <b>City:&emsp;</b> Doylestown, PA<br>
-                <b>Tickets:&emsp;</b> $10 Adv. / $15 Drs.<br>
-                <b>Buy Tickets:</b> <a id="ticket-link" target="_blank" href="https://www.eventbrite.com/e/115-vanish-cap-red-weather-emensia-moms-tickets-733452715817?aff=oddtdtcreator&fbclid=IwAR1y0Uj-G3CwgU7E6dGp1MAny0-6fDmUbEjYjRU73Az29VkbO9W6kSn9y6o">CLICK HERE</a><br>
-                <b>Doors:&emsp;</b> 6:00pm<br>
-            </p>
-        </div>
-            
+        </div>        
     </div>
 
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-11-05try2.jpg" alt="Red Weather Show Flyer November 5, 2023">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-11-04.jpg" alt="Red Weather Show Flyer November 4, 2023">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-11-03.jpg" alt="Red Weather Show Flyer November 3, 2023">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/23-10-28.jpg" alt="Red Weather Show Flyer October 28, 2023">
             </div>
