--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     </div>
 
     <div id="mobile-banner" class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=8n1cVK4IyxY" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "TAKE IT BACK" STREAMING NOW!</p></a>
+        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=8n1cVK4IyxY" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "FAKE FRIENDS" STREAMING NOW!</p></a>
     </div>
 
     <div class="hero">
         <div class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-            <a class="banner-text-anchor font-bodega-black" href="https://www.youtube.com/watch?v=8n1cVK4IyxY" target="_blank" id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "TAKE IT BACK" STREAMING NOW!</p></a>
+            <a class="banner-text-anchor font-bodega-black" href="https://www.youtube.com/watch?v=8n1cVK4IyxY" target="_blank" id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "FAKE FRIENDS" STREAMING NOW!</p></a>
         </div>
     </div>
 
