--- a/presskit.html
+++ b/presskit.html
@@ -80,15 +80,9 @@
 
         <div class="press-bio press-width">
             <h2 class="font-bodega-black">Bio</h2>
-            <p class="font-gimlet-reg">Red Weather formed in 2018, with their members boasting a combined decades of experience in the punk and emo scenes, having played in bands such as Driving East, The Courage Badge, From Rooftops and many others. Their love for the emo and pop punk sounds of the early 2000s drove them to write music reminiscent of the era, citing influences such as Taking Back Sunday, The Get Up Kids, Coheed & Cambria, Thursday and Saosin.</p>
-            <p class="font-gimlet-reg">Red Weather independently released their debut EP, Empty Places in 2020. With the EP under their belt, they immediately went back to work on their debut full length - Wish You Well - which released in Fall of 2021 under Revival Recordings distribution.</p>
-            <p class="font-gimlet-reg">After the departure of former guitarist Mike McFarland, Tim llardi & Brian Bassette recruited guitarists Chris Cornell and Ethan McQuade to solidify Red Weather's lineup as a 4-piece. Their first single as a quartet, Start Again, released in early 2023 and the band embarked on their first tour run in Summer 2023. The guys are actively working on new music and adding more shows to their resume, having recently played alongside bands like Trophy Eyes, Valleyheart, and Goalkeeper.</p>
-            <p class="font-gimlet-reg"><strong class="font-gimlet-cond-bold">Red Weather is:</strong>
-                <br>Tim Ilardi - Vocals/Bass
-                <br>Brian Bassette - Drums
-                <br>Chris Cornell - Guitar/Vocals
-                <br>Ethan McQuade - Guitar
-            </p>
+            <p class="font-gimlet-reg">Established in 2018 against the backdrop of Virginia Beach, Red Weather stands as a cornerstone of the Emo and Pop-Punk genres. The band is comprised of Tim Ilardi (vocals/bass), Brian Bassette (drums), Chris Cornell (guitar/vocals), and Ethan McQuade (guitar).</p>
+            <p class="font-gimlet-reg">Building on the success of their debut EP "Empty Places" (2020) and the emotive journey of their debut full-length "Wish You Well" (2021), Red Weather entered 2023 with purpose. They unveiled three singles, showcasing a continued commitment to exploring the intricate nuances of their sound. These releases set the stage for the band's inaugural two tours in 2023, a testament to their growing influence.</p>
+            <p class="font-gimlet-reg">Having shared stages with esteemed acts such as Trophy Eyes, Valleyheart, Mae, and Every Avenue, Red Weather's journey goes beyond mere musical exploration. With a dedication to their art and a respect for the gravity of Emo and Pop-Punk, the band is poised for a continued impact, both locally and beyond the shores of Virginia Beach.</p>
             </p>
         </div>
 
@@ -112,9 +106,10 @@
                 <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png" alt="Red Weather on Apple Music"></a>
             </div>
             <div id="press-music-player" class="music-player-wrapper">
-                <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2516812749/size=large/bgcol=333333/linkcol=e99708/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/track/take-it-back">Take it Back by Red Weather</a></iframe>
-                <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2575108123/size=large/bgcol=333333/linkcol=9a64ff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/track/start-again">Start Again by Red Weather</a></iframe>
-                <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=9a64ff/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
+                <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2094107155/size=large/bgcol=333333/linkcol=ab75b6/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/track/fake-friends">Fake Friends by Red Weather</a></iframe>
+                <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2516812749/size=large/bgcol=333333/linkcol=fda01b/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/track/take-it-back">Take it Back by Red Weather</a></iframe>
+                <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2575108123/size=large/bgcol=333333/linkcol=ae95e8/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/track/start-again">Start Again by Red Weather</a></iframe>
+                <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=e5c3c3/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
             </div>
         </div>
 
