--- a/shows.html
+++ b/shows.html
@@ -56,16 +56,18 @@
         <h1 class="shows-title font-bodega-black">UPCOMING SHOWS</h1>
 
         <!-- UNCOMMENT IF NO UPCOMING SHOWS -->
-        <!-- <div class="show press-width">
-            <h2 class="font-bodega-light">More shows coming soon!</h2>
-        </div> -->
-
-        <div class="tour-dates" style="width: 100%;">
-            <a href="https://www.songkick.com/artists/370411" class="songkick-widget" data-theme="dark" data-track-button="off" data-detect-style="on" data-background-color="rgb(0,0,0,1)" data-font-color="rgb(255,255,255,1)" data-locale="en" data-other-artists="on" data-share-button="off" data-country-filter="off" data-rsvp="off" data-request-show="off" data-past-events="off" data-past-events-offtour="off" data-remind-me="off">Red Weather Shows</a><script src='//widget-app.songkick.com/injector/370411'></script>
+        <div class="show press-width">
+            <img class="no-shows-img" src="img/live_shot.jpg">
+            <h2 class="font-bodega-light">More shows coming soon, see you in 2024!</h2>
         </div>
 
+        <!--
+        <div class="tour-dates" style="width: 100%;">
+            <a href="https://www.songkick.com/artists/370411" class="songkick-widget" data-theme="dark" data-track-button="off" data-detect-style="on" data-background-color="rgb(0,0,0,1)" data-font-color="rgb(255,255,255,1)" data-locale="en" data-other-artists="on" data-share-button="off" data-country-filter="off" data-rsvp="off" data-request-show="off" data-past-events="off" data-past-events-offtour="off" data-remind-me="off">Red Weather Shows</a><script src='//widget-app.songkick.com/injector/370411'></script>
+        </div> -->
+
         <!-- TEMPLATE -->
-        <div class="show press-width">
+        <!-- <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/23-11-17.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Local Pop-Punk Show @ Taphouse</h3>
             <p class="show-desc">
@@ -75,12 +77,18 @@
                 <b>Tickets:&emsp;</b> $10<br>
                 <b>Doors:&emsp;</b> 7:00pm<br>
             </p>
-        </div>        
+        </div>     -->   
     </div>
 
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-11-25.jpg" alt="Red Weather Show Flyer November 25, 2023">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-11-17.jpg" alt="Red Weather Show Flyer November 17, 2023">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/23-11-05try2.jpg" alt="Red Weather Show Flyer November 5, 2023">
             </div>
