FLH Era First Commit

--- a/presskit.html
+++ b/presskit.html
@@ -46,7 +46,7 @@
             <h2 class="font-bodega-black">Press Kit</h2>
             <img class="press-header-photo" src="img/hero-photo.webp" alt="Photo of Red Weather band members on a couch">
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/8n1cVK4IyxY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/JVl23W15SKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="press-header-quotes">
                 <li class="quote">
@@ -106,6 +106,7 @@
                 <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png" alt="Red Weather on Apple Music"></a>
             </div>
             <div id="press-music-player" class="music-player-wrapper">
+                <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2452260547/size=large/bgcol=333333/linkcol=61c565/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/track/fake-friends">Fake Friends by Red Weather</a></iframe>
                 <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2094107155/size=large/bgcol=333333/linkcol=ab75b6/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/track/fake-friends">Fake Friends by Red Weather</a></iframe>
                 <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2516812749/size=large/bgcol=333333/linkcol=fda01b/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/track/take-it-back">Take it Back by Red Weather</a></iframe>
                 <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2575108123/size=large/bgcol=333333/linkcol=ae95e8/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/track/start-again">Start Again by Red Weather</a></iframe>
