Updating show flyers

--- a/shows.html
+++ b/shows.html
@@ -67,14 +67,14 @@
 
         <!-- TEMPLATE -->
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/24-01-14.jpeg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Red Weather, Rise Defy, Wilde Owl, Spirit Gun @ Scandal's</h3>
+            <img class="show-flyer press-header-photo" src="img/shows/24-07-03.JPG" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Bardown Breakdown Tour @ Scandal's Live</h3>
             <p class="show-desc">
-                <b>Date:&emsp;</b> Jan. 14, 2023<br>
+                <b>Date:&emsp;</b> July 3rd, 2024<br>
                 <b>Venue:&emsp;</b> Scandal's Live<br>
                 <b>City:&emsp;</b> Virginia Beach, VA<br>
-                <b>Tickets:&emsp;</b> $10<br>
-                <b>Doors:&emsp;</b> 7:00pm<br>
+                <b>Tickets:&emsp;</b> $12 Adv. / $15 Day Of<br>
+                <b>Doors:&emsp;</b> 6:00pm<br>
             </p>
         </div>
     </div>
@@ -82,6 +82,15 @@
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/24-05-26.png" alt="Red Weather Show Flyer May 24, 2024">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/24-05-12.jpg" alt="Red Weather Show Flyer May 12, 2024">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/24-01-14.jpeg" alt="Red Weather Show Flyer January 14, 2024">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/23-11-25.jpg" alt="Red Weather Show Flyer November 25, 2023">
             </div>
@@ -150,6 +159,9 @@
             </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/22-03-05.jpg" alt="Red Weather Show Flyer March 5, 2022">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/21-11-13.jpg" alt="Red Weather Show Flyer November 13, 2021">
             </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/21-11-03.jpg" alt="Red Weather Show Flyer November 3, 2021">
