adding upcoming shows for ep release

--- a/shows.html
+++ b/shows.html
@@ -67,21 +67,36 @@
 
         <!-- TEMPLATE -->
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/24-07-03.JPG" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Bardown Breakdown Tour @ Scandal's Live</h3>
+            <img class="show-flyer press-header-photo" src="img/shows/24-09-26.JPG" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Fred's Emo Night @ Nostalgia</h3>
             <p class="show-desc">
-                <b>Date:&emsp;</b> July 3rd, 2024<br>
-                <b>Venue:&emsp;</b> Scandal's Live<br>
-                <b>City:&emsp;</b> Virginia Beach, VA<br>
-                <b>Tickets:&emsp;</b> $12 Adv. / $15 Day Of<br>
+                <b>Date:&emsp;</b>&emsp;September 26th, 2024<br>
+                <b>Venue:&emsp;</b> Nostalgia<br>
+                <b>City:&emsp;</b>&emsp; Bethpage, NY<br>
+                <b>Tickets:&emsp;</b>$15<br>
+                <b>Doors:&emsp;</b> 7:00pm<br>
+            </p>
+            <br>
+            <br>
+            <img class="show-flyer press-header-photo" src="img/shows/24-09-28.JPG" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">All We Have Is Time EP Release @ The Annex</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b>&emsp;September 28th, 2024<br>
+                <b>Venue:&emsp;</b> The Annex<br>
+                <b>City:&emsp;</b>&emsp; Norfolk, VA<br>
+                <b>Tickets:&emsp;</b>$12 Adv. / $15 Day Of<br>
                 <b>Doors:&emsp;</b> 6:00pm<br>
             </p>
+            <br>
         </div>
     </div>
 
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/24-07-03.JPG" alt="Red Weather Show Flyer July 3, 2024">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/24-05-26.png" alt="Red Weather Show Flyer May 24, 2024">
             </div>
