casing on "jpg" fix

--- a/shows.html
+++ b/shows.html
@@ -67,7 +67,7 @@
 
         <!-- TEMPLATE -->
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/24-09-26.JPG" alt="Upcoming Red Weather show flyer">
+            <img class="show-flyer press-header-photo" src="img/shows/24-09-26.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Fred's Emo Night @ Nostalgia</h3>
             <p class="show-desc">
                 <b>Date:&emsp;</b>&emsp;September 26th, 2024<br>
@@ -78,7 +78,7 @@
             </p>
             <br>
             <br>
-            <img class="show-flyer press-header-photo" src="img/shows/24-09-28.JPG" alt="Upcoming Red Weather show flyer">
+            <img class="show-flyer press-header-photo" src="img/shows/24-09-28.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">All We Have Is Time EP Release @ The Annex</h3>
             <p class="show-desc">
                 <b>Date:&emsp;</b>&emsp;September 28th, 2024<br>
