Updating about; cleaning; adding shows

--- a/presskit.html
+++ b/presskit.html
@@ -41,6 +41,8 @@
         <a class="mobile-link font-bodega-black" href="/#about">ABOUT</a>
     </div>
 
+    <!-- bardown breakdown youtube link-->
+    <!-- https://youtu.be/yuyKx6PsBTg?t=1341 -->
     <div class="press-section">
         <div class="press-header press-width">
             <h2 class="font-bodega-black">Press Kit</h2>
@@ -81,8 +83,9 @@
         <div class="press-bio press-width">
             <h2 class="font-bodega-black">Bio</h2>
             <p class="font-gimlet-reg">Established in 2018 against the backdrop of Virginia Beach, Red Weather stands as a cornerstone of the Emo and Pop-Punk genres. The band is comprised of Tim Ilardi (vocals/bass), Brian Bassette (drums), Chris Cornell (guitar/vocals), and Ethan McQuade (guitar).</p>
-            <p class="font-gimlet-reg">Building on the success of their debut EP "Empty Places" (2020) and the emotive journey of their debut full-length "Wish You Well" (2021), Red Weather entered 2023 with purpose. They unveiled three singles, showcasing a continued commitment to exploring the intricate nuances of their sound. These releases set the stage for the band's inaugural two tours in 2023, a testament to their growing influence.</p>
-            <p class="font-gimlet-reg">Having shared stages with esteemed acts such as Trophy Eyes, Valleyheart, Mae, and Every Avenue, Red Weather's journey goes beyond mere musical exploration. With a dedication to their art and a respect for the gravity of Emo and Pop-Punk, the band is poised for a continued impact, both locally and beyond the shores of Virginia Beach.</p>
+            <p class="font-gimlet-reg">Building on the success of their debut EP "Empty Places" (2020) and the emotive journey of their debut full-length "Wish You Well" (2021), Red Weather entered 2023 with purpose. They unveiled three singles, showcasing a continued commitment to exploring the intricate nuances of their sound.</p>
+            <p class="font-gimlet-reg">These releases set the stage for the band's inaugural two tours in 2023, a testament to their growing influence, and ultimately the release of their EP “All We Have Is Time,” which was produced by Will Beasley (Turnstile, Asking Alexandria, The Dangerous Summer) and mastered by Paul Leavitt (All Time Low, Yellowcard, The Used).</p>
+            <p class="font-gimlet-reg">Having shared stages with esteemed acts such as Boys Like Girls, Grayscale, Belmont, Trophy Eyes, Valleyheart, Alien Ant Farm, Mae, and Every Avenue, Red Weather's journey goes beyond mere musical exploration. With a dedication to their art and a respect for the gravity of Emo and Pop-Punk, the band is poised for a continued impact, both locally and beyond the shores of Virginia Beach.</p>
             </p>
         </div>
 
@@ -117,6 +120,9 @@
         <div class="press-videos press-width">
             <h2 class="font-bodega-black">Videos</h2>
             <div class="all-press-videos">
+                <div class="video-container"></div>
+                    <iframe src="https://www.youtube.com/embed/PDWtcZz4wIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
                 <div class="video-container">
                     <iframe src="https://www.youtube.com/embed/A1a1gFn1Kw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
