--- a/shows.html
+++ b/shows.html
@@ -43,12 +43,12 @@
     </div>
     
     <div id="mobile-banner" class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=JVl23W15SKk" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "FELT LIKE HOME" STREAMING NOW!</p></a>
+        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=unK-NhqlM90&list=OLAK5uy_kHaP_Q356RdZex3T4pesZrSwYspUg14e0" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">"ALL WE HAVE IS TIME" STREAMING EVERYWHERE!</p></a>
     </div>
 
-    <div class="shows-banner">
+    <div class="hero">
         <div class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-            <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=JVl23W15SKk" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "FELT LIKE HOME" STREAMING NOW!</p></a>
+            <a class="banner-text-anchor font-bodega-black" href="https://www.youtube.com/watch?v=unK-NhqlM90&list=OLAK5uy_kHaP_Q356RdZex3T4pesZrSwYspUg14e0" target="_blank" id="banner-text" class="banner-text font-bodega-black">"ALL WE HAVE IS TIME" STREAMING EVERYWHERE!</p></a>
         </div>
     </div>
 
@@ -66,6 +66,7 @@
         </div>
 
         <!-- TEMPLATE -->
+        <!--
         <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/24-09-26.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Fred's Emo Night @ Nostalgia</h3>
@@ -89,11 +90,30 @@
             </p>
             <br>
         </div>
+        -->
     </div>
 
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img"></div>
+                <img class="show-flyer press-header-photo" src="img/shows/25-01-24.jpg" alt="Red Weather Show Flyer January 24, 2025">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/24-09-28.jpg" alt="Red Weather Show Flyer September 28, 2024">
+            </div>
+            <div class="past-show-img"></div>
+                <img class="show-flyer press-header-photo" src="img/shows/24-09-26.jpg" alt="Red Weather Show Flyer July 3, 2024">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/24-08-12.JPG" alt="Red Weather Show Flyer August 12, 2024">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/24-07-17.JPG" alt="Red Weather Show Flyer July 17, 2024">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/24-07-16.JPG" alt="Red Weather Show Flyer July 16, 2024">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/24-07-03.JPG" alt="Red Weather Show Flyer July 3, 2024">
             </div>
