--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     </div>
 
     <div id="mobile-banner" class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=JVl23W15SKk" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "FELT LIKE HOME" STREAMING NOW!</p></a>
+        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=unK-NhqlM90&list=OLAK5uy_kHaP_Q356RdZex3T4pesZrSwYspUg14e0" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">"ALL WE HAVE IS TIME" STREAMING EVERYWHERE!</p></a>
     </div>
 
     <div class="hero">
         <div class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-            <a class="banner-text-anchor font-bodega-black" href="https://www.youtube.com/watch?v=JVl23W15SKk" target="_blank" id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "FELT LIKE HOME" STREAMING NOW!</p></a>
+            <a class="banner-text-anchor font-bodega-black" href="https://www.youtube.com/watch?v=unK-NhqlM90&list=OLAK5uy_kHaP_Q356RdZex3T4pesZrSwYspUg14e0" target="_blank" id="banner-text" class="banner-text font-bodega-black">"ALL WE HAVE IS TIME" STREAMING EVERYWHERE!</p></a>
         </div>
     </div>
 
@@ -92,8 +92,9 @@
                 <div class="about-paragraphs">
                     <a style="padding-top: 1em; text-decoration: none;" href="https://rdwthr.com/presskit"><strong class="font-gimlet-reg">EPK (Click Here)<br></strong></a>
                     <br><p class="font-gimlet-reg">Established in 2018 against the backdrop of Virginia Beach, Red Weather stands as a cornerstone of the Emo and Pop-Punk genres. The band is comprised of Tim Ilardi (vocals/bass), Brian Bassette (drums), Chris Cornell (guitar/vocals), and Ethan McQuade (guitar).</p>
-                    <br><p class="font-gimlet-reg">Building on the success of their debut EP "Empty Places" (2020) and the emotive journey of their debut full-length "Wish You Well" (2021), Red Weather entered 2023 with purpose. They unveiled three singles, showcasing a continued commitment to exploring the intricate nuances of their sound. These releases set the stage for the band's inaugural two tours in 2023, a testament to their growing influence.</p>
-                    <br><p class="font-gimlet-reg">Having shared stages with esteemed acts such as Trophy Eyes, Valleyheart, Mae, and Every Avenue, Red Weather's journey goes beyond mere musical exploration. With a dedication to their art and a respect for the gravity of Emo and Pop-Punk, the band is poised for a continued impact, both locally and beyond the shores of Virginia Beach.</p>
+                    <br><p class="font-gimlet-reg">Building on the success of their debut EP "Empty Places" (2020) and the emotive journey of their debut full-length "Wish You Well" (2021), Red Weather entered 2023 with purpose. They unveiled three singles, showcasing a continued commitment to exploring the intricate nuances of their sound.</p>
+                    <br><p class="font-gimlet-reg">These releases set the stage for the band's inaugural two tours in 2023, a testament to their growing influence, and ultimately the release of their EP “All We Have Is Time,” which was produced by Will Beasley (Turnstile, Asking Alexandria, The Dangerous Summer) and mastered by Paul Leavitt (All Time Low, Yellowcard, The Used).</p>
+                    <br><p class="font-gimlet-reg"><br><p class="font-gimlet-reg">Having shared stages with esteemed acts such as Trophy Eyes, Valleyheart, Mae, and Every Avenue, Red Weather's journey goes beyond mere musical exploration. With a dedication to their art and a respect for the gravity of Emo and Pop-Punk, the band is poised for a continued impact, both locally and beyond the shores of Virginia Beach.</p></p>
                 </div>
                 <div class="sponsors">
                     <p class="sponsor-title font-gimlet-cond-bold">SPONSORED BY</p>
